--- a/v602/content/diskussion.tex
+++ b/v602/content/diskussion.tex
@@ -7,7 +7,7 @@ der weiteren Messwerte aus. Ursachen für diese Abweichung könnten in der Kalib
 Bei der Untersuchung des Emissionsspektrums der Kupferanode wurden experimentelle Werte der $K$-Linien bestimmt. Diese weisen Abweichungen 
 von $\Delta K_{\alpha} = \qty{0.3}{\percent}$ und $\Delta K_{\beta} = \qty{1.34}{\percent}$ auf, was ebenfalls auf die Kalibrierung des Gerätes zurückzuführen sein könnte.
 In Anbetracht der zuvor bestimmten Messunsicherheit von $\qty{2.5}{\percent}$ bestätigen diese Messwerte die Theorie.
-Wie in \autoref{subsec:emission} beschrieben konnte kein Grenzwinkel experimentell aufgenommen werden, obgleich der Bereich von $\theta_{\text{Grenz,theo}}$
+Wie in \autoref{subsec:emission} beschrieben konnte kein Grenzwinkel experimentell aufgenommen werden, obgleich der Bereich des Literaturwertes
 abgemessen wurde. Eine Ursache dafür könnte ein Hintergrundrauschen des Geiger-Müller-Zählrohres sein, welches keine Differenziation des Beginns der Röntgenphänomene 
 zum Grundrauschen erlaubt.  
 
@@ -17,7 +17,6 @@ dass der Wert aussagekräftig ist, da die nötigen Werte zur Berechnung des Aufl
 Im letzten Teil des Messabschnittes zum Emissionsspektrum wurden die Abschirmkonstanten für Kupfer aus den Emissionsenergien bestimmt. Zu $\sigma_1$ kann kein experimenteller
 Wert bestimmt werden, da sich mit der vorhandenen Apparatur $E_{K \text{,abs}}$ nicht messen lässt.
 Die Abschirmkonstante $\sigma_2$ wurde mit einer Abweichung von $1.71\%$ und $\sigma_3$ mit einer Abweichung von $21.66\%$ bestimmt.
-Eine Ursache für die Größe der zweiten Abweichung konnte nicht ermittelt werden.
 
 Im letzten Messabschnitt wurden die Absorptionsenergieen und die Abschirmkonstanten für fünf verschiedene Stoffe berechnet. Dabei liegen die Abweichungen der 
 Absorptionsenergien lediglich zwischen $0.82\%$ und $3.94\%$. Eine zusätzliche Fehlerqulle könnte in der Installation der verschiedenen Absorberstoffe in der Messapparatur
