--- a/v602/content/durchfuehrung.tex
+++ b/v602/content/durchfuehrung.tex
@@ -5,14 +5,14 @@ Zum Vergleich der Güte der Messergebnisse müssen zunächst Literaturwerte rech
 \subsection{Vorbereitungsaufgaben}
 \label{subsec:vorbereitung}
 Da das Emissionsspektrum von Kupfer untersucht werden soll, werden zunächst die hierfür nötigen Theoriewerte bestimmt.
-Bei Kupfer liegt die $\symup{K}_\alpha$-Linie bei $\qty{8}{\kilo\electronvolt}$. Daraus kann der zugehörige Bragg-Winkel $\Theta_{\symup{K}} = \qty{22.66}{\degree}$ 
+Bei Kupfer liegt die $\symup{K}_\alpha$-Linie bei $\qty{8}{\kilo\electronvolt}$ \cite{NIST}. Daraus kann der zugehörige Bragg-Winkel $\Theta_{\symup{K}} = \qty{22.66}{\degree}$ 
 ermittelt wereden. Die $\symup{Cu}\text{-}\symup{K}_{\beta}$-Linie liegt bei $\qty{8.95}{\kilo\electronvolt}$ mit einem Bragg-Winkel von $\Theta_{\symup{K}} = \qty{20.14}{\degree}$.
 
 Für die fünf untersuchten Absorbermaterialien sind ebenfalls einige Literaturwerte von Relevanz, welche in \autoref{tab:vorbereitung} dargestellt sind.
 \begin{table}
     \centering
     \caption{Literaturwerte für die Untesuchung der Absorbtionsspektren. $Z$ ist die Ordnungszahl des jeweiligen Elements, $E_K$ die Absorptionsenergie und $\sigma_K$
-    die Abschirmkonstante.}
+    die Abschirmkonstante. \cite{NIST}}
     \label{tab:vorbereitung}
     \begin{tabular}{l c S S S}
         \toprule
@@ -48,20 +48,20 @@ Folgend wird in der oberen Leiste unter dem Menüpunkt \textit{Messgerät} das \
 Im ersten Teil des Versuches wird die Braggbedingung überprüft. Dazu muss die Neigung des LiF-Kristalls zu $\qty{14}{\degree}$ eingestellt werden. 
 Im selben 
 Menü wird für das Geiger-Müller-Zählrohr (im Folgenden \textit{GMZ} genannt) eine Winkelspanne von $\qty{26}{\degree}$ bis $\qty{30}{\degree}$ eingestellt. Der Winkelzuwachs
-wird auf $\qty{0.1}{\degree}$ festgelegt. Die Integrationzeit sollte $\Delta t = \qty{5}{\second}$ betragen.
+wird auf $\qty{0.1}{\degree}$ festgelegt. Die Integrationszeit sollte $\Delta t = \qty{5}{\second}$ betragen.
 Nach Start der Messung werden Messwerte zu den angegebenen Winkeln genommen. Diese können in ein Textdokument gespeichert werden.
 
 Es wird das globale Maximum der Messwerte ermittelt und mit dem Theoriewert, welcher aus der Braggbedingung berechnet werden kann, abgeglichen.
 Bei Abweichungen von $\qty{1}{\degree}$ oder mehr sollten systematische Fehler ausgeschlossen und gegebenenfalls des Gerät neu kalibriert werden.
 
 Anschließend wird das Emissionsspektrum der Kupferanode untersucht. Dazu wird zuerst in \textit{measure} der \textit{2:1 Koppelmodus} aktiviert. Für die erste Messung 
-wird der Winkelbereich von $\qty{4}{\degree}$ bis $\qty{26}{\degree}$ eingestellt. Der Winkelzuwachs wird auf $\qty{0.2}{\degree}$ gestellt und die Integrationzeit bleibt 
-unverändert. Es wird erneut die Intensität gemessen. Nach Vollendung Messung lässt sich eine Grafik erstellen, welcher die $\symup{K}_\alpha$- und $\symup{K}_\beta$-Linien 
+wird der Winkelbereich von $\qty{4}{\degree}$ bis $\qty{26}{\degree}$ eingestellt. Der Winkelzuwachs wird auf $\qty{0.2}{\degree}$ gestellt und die Integrationszeit bleibt 
+unverändert. Es wird erneut die Intensität gemessen. Nach Vollendung der Messung lässt sich eine Grafik erstellen, welcher die $\symup{K}_\alpha$- und $\symup{K}_\beta$-Linien 
 entnommen werden können. Anhand dieser Grafik wird nun ein möglichst kleiner Winkelbereich um die beiden Peaks gewählt. Mit diesem Winkelbereich und einem Winkelzuwachs von
 $\qty{0.1}{\degree}$ wird erneut die Intensität gemessen, sodass ein Detailspektrum dargestellt werden kann
 . 
 Zuletzt werden die Absorptionsspektren verschiedener Stoffe untersucht. Dazu wird zuerst ein Zinkabsorber vor dem \textit{GMZ} befestigt.
 Im Programm \textit{measure} wird ein Winkelzuwachs
 von $\qty{0.1}{\degree}$ und eine Integrationszeit von $\Delta t = \qty{20}{\second}$ eingestellt. Da mit dieser Integrationszeit eine Messung über einen großen 
-Winkelbereich sehr lange dauert wird ein hinreichend großer, jedoch möglichst kleiner Winkelbereich gewählt. Dieser wird anhand \autoref{tab:vorbereitung} in einem Intervall
+Winkelbereich sehr lange dauert, wird ein hinreichend großer, jedoch möglichst kleiner Winkelbereich gewählt. Dieser wird anhand \autoref{tab:vorbereitung} in einem Intervall
 um den erwarteten Wert gewählt. Dieser Prozess wird für insgesamt fünf verschiedene Absorber wiederholt.
