--- a/v602/content/theorie.tex
+++ b/v602/content/theorie.tex
@@ -27,12 +27,12 @@ Allgemein gilt der Zusammenhang
 zwischen Wellenlänge $\lambda$ und der Energie eines Photons.
 
 \subsection{Charakteristische Röntgenstrahlung} 
-\label{subsec:Bremsspektrum}
-Bei der zweiten Form der Energieabgabe wird ein Atom den Anodenmaterials ionisiert, sodass eine Leerstelle in einer inneren Schale des Atoms entsteht. 
+\label{subsec:Charakteristische}
+Bei der zweiten Form der Energieabgabe wird ein Atom des Anodenmaterials ionisiert, sodass eine Leerstelle in einer inneren Schale des Atoms entsteht. 
 Beim Zurückfallen eines Elektrons einer äußeren Schale wird dann wieder ein Phtoton emittiert. Das Elektron kann jedoch nur diskrete Energien abgeben,
 welche der Differenz zwischen den Energieniveaus der Elektronen der verschiedenen Schalen entspricht, wodurch die \textit{charakteristische Röntgenstrahlung}
 entsteht. Die durch diesen Effekt verursachten Peaks im Röntgenspektrum eines Materials werden mit $K_\alpha$, $K_\beta$, $L_\alpha$ usw. bezeichnet.
-Der Index des Bezeichners gibt an, von welcher Schale das Elektron auf die $K$-, $L$-, $M$- ... Schale absinkt.
+Der Index des Bezeichners gibt an, von welcher Position das Elektron auf die $K$-, $L$-, $M$- ... Schale absinkt.
 
 Die Frequenz des emittierten Photons lässt sich mittels der Energiedifferenz der Schalen $m$ und $n$ zu $h \nu = E_m - E_n$ bestimmen. 
 Die Bindungsenergie eines Elektrons auf der $n$-ten Schale ergibt sich zu 
