Durchführung :white_check_mark: plot.py angefangen

--- a/lit.bib
+++ b/lit.bib
@@ -125,3 +125,10 @@
 	urldate = {2021-12-10},
 	organization = {Deutsche Gesetzliche Unfallversicherung e.V. (DGUV)},
 }
+
+@online{v606,
+	title        = {V606 - Messung der Suszeptibilität paramagentischer Stoffe},
+	organization = {TU Dortmund},
+	urldate      = {2022-04-27},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1933356/mod_resource/content/1/V606.pdf},
+}
