--- a/v606/v606.tex
+++ b/v606/v606.tex
@@ -1,11 +1,11 @@
 \input{header.tex}
 
-\subject{VERSUCH NUMMER}
-\title{TITEL}
+\subject{606}
+\title{Messung der Suszeptibilität paramagnetischer Stoffe}
 \date{%
-  Durchführung: DATUM
+  Durchführung: 26.04.2022
   \hspace{3em}
-  Abgabe: DATUM
+  Abgabe: 02.05.2022
 }
 
 \begin{document}
