hier kleine korrektur meiner dummheit

--- a/v606/content/theorie.tex
+++ b/v606/content/theorie.tex
@@ -143,3 +143,10 @@ Güte eines Selektivverstärkers kann gemäß
     Q = \frac{\nu_0}{\nu_+ - \nu_-}
 \end{equation}
 berechnet werden. Dabei beschreibt $\nu_{\pm}$ die Frequenz bei welcher die Filterkurve $\frac{1}{\sqrt{2}}$ erreicht.
+
+\begin{figure}
+    \centering
+    \includegraphics[width = .7\textwidth]{content/Filterkurve.PNG}
+    \caption{Beispiel einer möglichen Filterkurve. \cite{v606}}
+    \label{fig:Filterkurve}
+\end{figure} 
