--- a/v606/content/theorie.tex
+++ b/v606/content/theorie.tex
@@ -140,13 +140,14 @@ zu sehen. Eine Filterkurve beschreibt die Abhängigkeit von
 $\frac{U_{\text{A}}}{U_{\text{E}}}$ zur Frequenz $\nu$. Die Breite der Filterkurve ist ein Maß für die Spannungsunterdrückung. Damit im Zusammenhang steht die Güte $Q$. Die
 Güte eines Selektivverstärkers kann gemäß
 \begin{equation}
+    \label{eqn:Guete}
     Q = \frac{\nu_0}{\nu_+ - \nu_-}
 \end{equation}
 berechnet werden. Dabei beschreibt $\nu_{\pm}$ die Frequenz bei welcher die Filterkurve $\frac{1}{\sqrt{2}}$ erreicht.
 
 \begin{figure}
     \centering
-    \includegraphics[width = .7\textwidth]{content/Filterkurve.PNG}
+    \includegraphics[width = .5\textwidth]{content/Filterkurve.PNG}
     \caption{Beispiel einer möglichen Filterkurve. \cite{v606}}
     \label{fig:Filterkurve}
 \end{figure} 
