--- a/v606/content/auswertung.tex
+++ b/v606/content/auswertung.tex
@@ -40,3 +40,28 @@ Die relative Abweichung berechnet sich nach \autoref{eqn:Delta_rel}. Als Theorie
   \caption{Filterkurve des Selektivverstärkers. Erstellt mit \textit{matplotlib} \cite{matplotlib} unter Verwendung von \textit{scipy} \cite{scipy}.}
   \label{fig:plot}
 \end{figure}
+
+\subsection{Bestimmung der Suszeptibilitäten}
+\label{subsec:A_Suszep}
+
+\begin{table}
+  \centering
+  \caption{Experimentell ermittelte Suszeptibilitäten.}
+  \label{tab:Chi_exp}
+  \begin{tabular}{c S[table-format = 1.4] S S r c l}
+    \toprule
+      {Aus Widerständen} & {$\chi_1$} & {$\chi_2$} & {$\chi_3$} &
+      \multicolumn{3}{c}{$\overline{\chi}_\text{exp}$}  \\
+    \midrule
+      {$\symup{Dy}_2\symup{O}_3$}                 & 0.0198 & 0.0224 & 0.0235 & 0.0219 & {$\pm$} & 0.0016 \\
+      {$\symup{Gd}_2\symup{O}_3$}                 & 0.0268 & 0.0303 & 0.0319 & 0.0297 & {$\pm$} & 0.0021 \\
+      {$\symup{C}_6\symup{O}_{12}\symup{Pr}_3$}   & 0.0042 & 0.0048 & 0.0050 & 0.0047 & {$\pm$} & 0.0003 \\
+    \bottomrule
+      {Aus Spannungen} & & & & & \\
+    \bottomrule 
+      {$\symup{Dy}_2\symup{O}_3$}                 & 0.0203 & 0.0228 & 0.0219 & 0.0217 & {$\pm$} & 0.0011 \\
+      {$\symup{Gd}_2\symup{O}_3$}                 & 0.0275 & 0.0309 & 0.0298 & 0.0294 & {$\pm$} & 0.0014 \\
+      {$\symup{C}_6\symup{O}_{12}\symup{Pr}_3$}   & 0.0043 & 0.0048 & 0.0047 & 0.0046 & {$\pm$} & 0.0002 \\
+    \bottomrule 
+  \end{tabular}
+\end{table}
