TABELLEN FEDDIG BREEEEEEEEE :shit:

--- a/v606/content/auswertung.tex
+++ b/v606/content/auswertung.tex
@@ -65,3 +65,32 @@ Die relative Abweichung berechnet sich nach \autoref{eqn:Delta_rel}. Als Theorie
     \bottomrule 
   \end{tabular}
 \end{table}
+
+\begin{table}
+  \centering
+  \caption{Abweichung von Theoriewerten zu den Suszptibilitäten(Spannung).}
+  \label{tab:Chi_abwU}
+  \begin{tabular}{c S[table-format = 1.4] S @{${}\pm{}$} l S}
+    \toprule
+       & {$\chi_{\text{theo}}$} & \multicolumn{2}{c}{$\overline{\chi}_\text{exp}$} & {$\symup{\Delta}\chi\mathbin{/}\%$} \\
+    \midrule
+      {$\symup{Dy}_2\symup{O}_3$}                & 0.0254 & 0.0217 & 0.0011 & 13.74  \\
+      {$\symup{Gd}_2\symup{O}_3$}                & 0.0138 & 0.0294 & 0.0014 & 115.37 \\
+      {$\symup{C}_6\symup{O}_{12}\symup{Pr}_3$}  & {-}    & 0.0046 & 0.0002 & {-}    \\
+    \bottomrule
+  \end{tabular}
+\end{table}
+\begin{table}
+  \centering
+  \caption{Abweichung von Theoriewerten zu den Suszptibilitäten(Widerstand).}
+  \label{tab:Chi_abwR}
+  \begin{tabular}{c S[table-format = 1.4] S @{${}\pm{}$} l S}
+    \toprule
+       & {$\chi_{\text{theo}}$} & \multicolumn{2}{c}{$\overline{\chi}_\text{exp}$} & {$\symup{\Delta}\chi\mathbin{/}\%$} \\
+    \midrule
+      {$\symup{Dy}_2\symup{O}_3$}                & 0.0254 & 0.0219 & 0.0016 & 14.59 \\
+      {$\symup{Gd}_2\symup{O}_3$}                & 0.0138 & 0.0297 & 0.0021 & 113.27 \\
+      {$\symup{C}_6\symup{O}_{12}\symup{Pr}_3$}  & {-} & 0.0047 & 0.0003 & {-} \\
+    \bottomrule
+  \end{tabular}
+\end{table}
